# databook-generator

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
databook_generator/: __init__.py  __main__.py  _version.py  builder.py  cli.py
databook_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
example/api_example/: generate_report.py
example/api_example/chapters/: measurements.adoc  overview.adoc
example/api_example/templates/: cell_library.adoc
example/markdown_example/: config.json
example/markdown_example/chapters/: measurements.md  overview.md
