[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databook-generator"
version = "1.0.0"
description = "Generate PDF databooks from AsciiDoc or Markdown chapters with Jinja2 templating"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Rohan Chadhury", email = "rohaanshahid@gmail.com" },
]
keywords = [
    "asciidoc", "markdown", "pdf", "documentation", "databook",
    "jinja2", "asciidoctor", "technical-writing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Required only when using Markdown (.md) chapters.
# Also requires pandoc to be installed on the system (see README).
markdown = [
    "pypandoc>=1.12",
]
# All optional dependencies bundled
all = [
    "pypandoc>=1.12",
]

[project.scripts]
databook-generator = "databook_generator.cli:main"

[project.urls]
Homepage = "https://github.com/rohaansch/databook-generator"
Documentation = "https://github.com/rohaansch/databook-generator#readme"
Issues = "https://github.com/rohaansch/databook-generator/issues"
Changelog = "https://github.com/rohaansch/databook-generator/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["databook_generator*"]

[tool.setuptools.package-data]
databook_generator = ["py.typed"]
